adjust swiper margin bottom

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           .swiper {
             width: 100%;
             display: none;
+            margin-bottom: -40px;
           }
 
           .swiper-button-prev,
