adjust swiper bug for desktop

--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
           $('.description-box').removeClass('description-box-active');
           $('.description-box').removeClass('description-box-inactive');
           $('.box').removeClass('box-active');
-          $('.box').removeClass('box-active box-analytics box-cloud box-data');
+          $('swiper .box').removeClass('box-active box-analytics box-cloud box-data');
           $('.swiper').hide();
         });
 
