added color when description selected

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <span class="text-analytics">Analytics</span>
               </div>
               <div class="description-box-body">
-                Over 80% of analytic projects never have their insights acted upon. Our Consultants can help you embed insight into day to day operations – talk to us.
+                Analytic capabilities can generate tremendous value. Yet, over 80% of analytic projects never have their insights acted upon. SKALE UP your insight to action and embed insight into day to day operations.
               </div>
             </div>
             <div class="description-box description-box-cloud">
@@ -249,7 +249,7 @@
                 <span class="text-cloud">Cloud</span>
               </div>
               <div class="description-box-body">
-                Over 80% of analytic projects never have their insights acted upon. Our Consultants can help you embed insight into day to day operations – talk to us.
+                The Cloud is where you need to be to do business. With the Cloud comes increased complexity and costs that are not under control. Our Cloud Squadron can help you address these challenges to SKALE UP your Cloud environment.
               </div>
             </div>
             <div class="description-box description-box-data">
@@ -261,7 +261,7 @@
                 <span class="text-data">Data</span>
               </div>
               <div class="description-box-body">
-                Data is an economic asset that can create value beyond its original purpose. We can help you get more from your data – talk to us.
+                Better data is better business and Customer satisfaction. Yet only 17% of organizations reported that their Data Quality improved over the last three years. SKALE UP your Data Quality with ProSkales.
               </div>
             </div>
           </div>
