--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-        <title>Blank HTML5</title>
+        <title>Animated Data Circles</title>
      
         <link
           rel="stylesheet"
